--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   flutter_html: ^2.2.1
-  provider: ^6.0.3
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
