--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
   flutter_html: ^3.0.0-alpha.5
   dio: ^4.0.6
+  flutter_bloc: ^8.1.1
   # cached_network_image: ^3.2.2
 
 dev_dependencies:
