UPDATE: desing, data layer. CREATE: pdfViewer, persons bloc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.5
   dio: ^4.0.6
   flutter_bloc: ^8.1.1
+  easy_pdf_viewer: ^1.0.3
   # cached_network_image: ^3.2.2
 
 dev_dependencies:
