UPDATE: finish search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_bloc: ^8.1.1
   easy_pdf_viewer: ^1.0.3
   url_launcher: ^6.1.5
+  flutter_typeahead: ^4.1.1
+  bloc_concurrency: ^0.2.0
+  stream_transform: ^2.0.0
   # cached_network_image: ^3.2.2
 
 dev_dependencies:
