--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_typeahead: ^4.1.1
   bloc_concurrency: ^0.2.0
   stream_transform: ^2.0.0
+  shimmer: ^2.0.0
   # cached_network_image: ^3.2.2
 
 dev_dependencies:
